# pymoors

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  Makefile  README.md  development.html  getting_started_moors.html  getting_started_pymoors.html  index.html  mkdocs.yml  pyproject.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
benches/: fds.rs
docs/: getting_started.md
moors/: Cargo.toml  Makefile  README.md
moors/benches/: fds.rs
moors/src/: evaluator.rs  genetic.rs  lib.rs  random.rs
moors/src/algorithms/: agemoea.rs  mod.rs  nsga2.rs  nsga3.rs  revea.rs  rnsga2.rs
moors/src/duplicates/: close.rs  exact.rs  mod.rs
moors/src/helpers/: linalg.rs  mod.rs  printer.rs
moors/src/non_dominated_sorting/: fds.rs  mod.rs
moors/src/operators/: evolve.rs  mod.rs
moors/src/operators/crossover/: exponential.rs  mod.rs  order.rs  sbx.rs  single_point.rs  uniform_binary.rs
moors/src/operators/mutation/: bitflip.rs  displacement.rs  gaussian.rs  mod.rs  scramble.rs  swap.rs
moors/src/operators/sampling/: mod.rs  permutation.rs
moors/src/operators/sampling/random/: binary.rs  float.rs  int.rs  mod.rs
moors/src/operators/selection/: mod.rs  random_tournament.rs  rank_and_survival_scoring_tournament.rs
moors/src/operators/survival/: agemoea.rs  helpers.rs  mod.rs  nsga2.rs  nsga3.rs  revea.rs  rnsga2.rs
moors/src/operators/survival/reference_points/: dan_and_dennis.rs  mod.rs
moors/tests/: tests_algorithms.rs
pymoors/: Cargo.toml  Makefile  mkdocs.yml  pyproject.toml
pymoors/docs/: development.md  getting_started_moors.md  index.md
pymoors/docs/js/: custom_mathjax.js
pymoors/docs/stylesheets/: extra.css
pymoors/docs/user_guide/: duplicates.md
pymoors/docs/user_guide/algorithms/: algorithms.ipynb  nsga2.ipynb  revea.ipynb  rnsga2.ipynb
pymoors/pymoors_macros/: Cargo.toml
pymoors/src/: lib.rs  py_error.rs  py_fitness_and_constraints.rs  py_operators.rs  py_reference_points.rs
pymoors/src/algorithms/: agemoea.rs  mod.rs  nsga2.rs  nsga3.rs  revea.rs  rnsga2.rs
pymoors/tests/algorithms/: test_infeasibility.py  test_knapsack.py
pymoors/tests/benchmarks/: test_algorithms_benchmark.py
pymoors/tests/operators/: test_crossover.py  test_mutation.py
pymoors_macros/: README.md
src/: evaluator.rs  genetic.rs  lib.rs  random.rs
tests/: test_schemas.py
user_guide/: duplicates.html  fitness_and_constraints.html  operators.html
(+73 files in other folders)
