[package]
name = "moors"
version = "0.1.0"
edition = "2024"

[lib]
name = "moors"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.9.0"
rand_distr = "0.5.1"
num-traits = "0.2.19"
ndarray = "0.16.1"
ordered-float = "5.0.0"
rayon = "1.10.0"
ndarray-stats = "0.6.0"
faer-ext = { version = "0.5.0", features = ["ndarray"] }
faer = "0.21.9"

[dev-dependencies]
criterion = "0.5.1"
rstest = "0.25.0"

[[bench]]
name = "benches"
path = "benches/fds.rs"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[profile.dev]
incremental = true

[profile.test]
incremental = true
