[package]
name = "pymoors"
version = "0.1.2"
edition = "2024"

[lib]
name = "pymoors"
crate-type = ["cdylib", "rlib"]

[package.metadata.maturin]
python-source = "python"

[dependencies]
pyo3 = { version = "0.24.1", features = ["multiple-pymethods"]}
numpy = "0.24.0"
rand = "0.9.0"
rand_distr = "0.5.1"
num-traits = "0.2.19"
ndarray = "0.16.1"
ordered-float = "5.0.0"
rayon = "1.10.0"
ndarray-stats = "0.6.0"
pymoors_macros = { path = "../pymoors_macros"}
moors = {path = "../moors"}
faer-ext = { version = "0.5.0", features = ["ndarray"] }
faer = "0.21.9"

[features]
extension-module = ["pyo3/extension-module"]

[dev-dependencies]
criterion = "0.5.1"
rstest = "0.25.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[profile.dev]
incremental = true

[profile.test]
incremental = true
